--- a/style.css
+++ b/style.css
@@ -1,169 +1,88 @@
+/* General reset */
 body {
-    padding: 0;
-    overflow: hidden;
-    font-family: -apple-system,  "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  margin: 0;
+  font-family: Arial, sans-serif;
 }
 
-
-body * {
--webkit-touch-callout: none;
--webkit-user-select: none;
--moz-user-select: none;
--ms-user-select: none;
-user-select: none;
+a {
+  text-decoration: none;
+  color: #0073e6;
 }
 
-.map {
-    position: absolute;
-    right: 0px;
-    left: 340px;
-    height: 100%;
-    top: 0;
+a:hover {
+  text-decoration: underline;
 }
 
+img {
+  max-width: 100%;
+  height: auto;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+}
+
+/* Layout styles */
+.container {
+  display: flex;
+  height: 100vh;
+}
+
+/* Sidebar styles */
 .sidebar {
-    position: absolute;
-    left: 0px;
-    width: 340px;
-    top: 0;
-    bottom: 0;
-    overflow-y: auto;
-    padding: 20px;
-    padding-bottom: 60px;
-    background-color: #000;
+  width: 250px;
+  background-color: #f4f4f4;
+  padding: 20px;
+  box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  overflow-y: auto;
 }
 
-
-.item {
-    padding: 10px;
-    background-color: #eee;
+.sidebar h1 {
+  font-size: 24px;
+  margin-bottom: 10px;
 }
 
-.item:not(:last-child) {
-    margin-bottom: 10px;
+.sidebar p {
+  margin: 10px 0;
+  font-size: 14px;
 }
 
-.item-heading {
-    font-size: 18px;
-    margin-top: 0;
-    font-weight: bold;
+.contact-icons {
+  margin-top: 20px;
 }
 
-.sort {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 340px;
-    background-color: #fff;
-    padding: 20px;
+.contact-icons a {
+  display: block;
+  margin-bottom: 10px;
+  font-size: 14px;
 }
 
-.sort-option {
-    margin-left: 10px;
+.contact-icons i {
+  margin-right: 8px;
+  color: #0073e6;
 }
 
-.sort-option.selected {
-    border-bottom: 1px solid #ccc;
+/* Main content styles */
+.main-content {
+  margin-left: 270px;
+  padding: 20px;
+  overflow-y: auto;
+  flex: 1;
 }
 
-.sidebar nav.navbar-default {
-    border: 0;
-    border-radius: 0;
-    background-color: #fff;
-    border-bottom: 1px solid #eee;
-    margin: -14px -20px 20px;
-    padding: 10px 20px 15px;
+.main-content h2 {
+  font-size: 22px;
+  border-bottom: 2px solid #0073e6;
+  padding-bottom: 5px;
+  margin-bottom: 20px;
 }
 
-.navbar-brand {
-    font-size: 14px;
-    font-weight: bold;
+.project {
+  margin-bottom: 30px;
 }
 
-
-.button2 {
-
-  width: 70px;
-  height: 30px;
-  margin: 0px;
-  background: black;
-  border: black;
-  color: white;
-  font-size: 0.9em;
-  font-family: arial, serif;
-  padding: 8px 4px;
-  text-align: center;
-  display: table-cell;
-  vertical-align: middle;
+.project h3 {
+  margin: 10px 0;
+  font-size: 18px;
 }
-
-.boldoption {
-  width: 150px;
-	font-weight: bold;
-}
-
-.button2:hover {
-  background-color: white; /* Green */
-  color: black;
-}
-
-.button3 {
-
-  width: 70px;
-  height: 60px;
-  margin: 0px;
-  background: black;
-  border: black;
-  color: white;
-  font-size: 0.9em;
-  font-family: arial, serif;
-  padding: 8px 4px;
-  text-align: center;
-  display: table-cell;
-  vertical-align: middle;
-}
-
-.button3:hover {
-  background-color: white; /* Green */
-  color: black;
-}
-
-/* =============
-Media Queries
-============= */
-
-@media screen and (min-width: 480px) and (max-width: 800px) {
-    /*.item {
-        background-color: blue;
-    }*/
-}
-
-@media screen and (max-width: 479px) {
-    /*.item {
-        background-color: red;
-    }*/
-}
-
-
-h2 {
-  font-family: "Futura";
-  color: white;
-}
-
-h3 {
-  font-family: "Geneva";
-  color: white;
-}
-
-h4 {
-  font-family: "Geneva";
-  color: white;
-}
-
-p {
-  position: relative;
-  list-style: none;
-  padding-left: 10px;
-  padding-right: 80px;
-  font-family: 10px "Geneva";
-  color: white;
