--- a/style.css
+++ b/style.css
@@ -116,13 +116,9 @@ body {
   object-fit: contain; /* 保证图标在框内适应 */
 }
 
-.education-item h3 {
-  margin-bottom: 5px; /* 在校名下面增加一些间距 */
-}
 
 .education-item p {
-  margin-top: 0; /* 确保学位与校名之间有合适的间距 */
-  margin-bottom: 15px; /* 学位信息的下方留一些间距 */
+  margin-left: 10px; /* 确保学位与校名之间有合适的间距 */
 }
 
 h3 {
